--- a/res/values/cm_strings.xml
+++ b/res/values/cm_strings.xml
@@ -44,8 +44,8 @@
     <string name="import_sim_contacts_title">Import SIM contacts</string>
     <string name="import_sim_contacts_message">Importing SIM contacts\u2026</string>
     <string name="ContactMultiImportConfirmation">The selected contacts will be imported.</string>
-    <string name="import_finish">"Import finished"</string>
-    <string name="import_stop">"Import was canceled</string>
+    <string name="import_finish">Import finished</string>
+    <string name="import_stop">Import was canceled</string>
     <string name="too_many_contacts_add_to_group">No more than <xliff:g id="count">%d</xliff:g> contacts can be added</string>
     <!-- Multi Delete Contacts related strings -->
     <string name="ContactMultiDeleteConfirmation">The selected contacts will be deleted.</string>
@@ -97,7 +97,7 @@
 
     <!-- Call-log count in one call-log group. Call location and call date. -->
     <string name="recent_call_count_or_location_and_date" translatable="false">(<xliff:g id="call_count">%1$d</xliff:g>) <xliff:g id="call_location_and_date">%2$s</xliff:g></string>
-    <string name="description_list_delimiter" translatable="false">", "</string>
+    <string name="description_list_delimiter" translatable="false">, </string>
 
     <!--Toast msg when user select too many contacts to merge-->
     <string name="too_many_contacts_to_merge_message">No more than <xliff:g id="count">%d</xliff:g> contacts can be merged</string>
@@ -108,14 +108,14 @@
     <string name="replace_button">REPLACE</string>
 
     <!-- merge contacts -->
-    <string name="merge_contacts">"Merge contacts"</string>
-    <string name="merging_contacts">"Merging contacts\u2026"</string>
-    <string name="searching_duplicated_contacts">"Searching for duplicated contacts\u2026"</string>
-    <string name="no_duplicated_contacts">"No duplicated contacts"</string>
-    <string name="give_up_merging">"Stop merging contacts?"</string>
-    <string name="give_up">"Stop merge"</string>
-    <string name="merge_complete">"Merge complete."</string>
-    <string name="sim_email_full">"SIM card email storage is full."</string>
-    <string name="sim_anr_full">"SIM card number storage is full."</string>
-    <string name="merge_fail">"Merge failed."</string>
+    <string name="merge_contacts">Merge contacts</string>
+    <string name="merging_contacts">Merging contacts\u2026</string>
+    <string name="searching_duplicated_contacts">Searching for duplicated contacts\u2026</string>
+    <string name="no_duplicated_contacts">No duplicated contacts</string>
+    <string name="give_up_merging">Stop merging contacts?</string>
+    <string name="give_up">Stop merge</string>
+    <string name="merge_complete">Merge complete.</string>
+    <string name="sim_email_full">SIM card email storage is full.</string>
+    <string name="sim_anr_full">SIM card number storage is full.</string>
+    <string name="merge_fail">Merge failed.</string>
 </resources>
